src/components/shared/header/Header.module.scss
.wrapper {
  @apply relative sticky top-0;

  .header {
    @apply bg-primary py-2 px-3 lg:px-5 flex items-center justify-between z-10 w-full;

    .logo {
      @apply flex gap-2 items-center;

      .title {
        @apply sm:text-xl lg:text-3xl text-primary font-medium;
      }
    }

    .hamburguerMenu {
      @apply block lg:hidden;
    }

    .nav {
      @apply flex gap-3 lg:gap-6 items-center;

      &.authenticated {
        @apply hidden lg:flex;
      }

      .userContainer {
        @apply flex gap-2 items-center;

        .textContainer {
          @apply flex flex-col items-end text-sm;

          .email {
            @apply text-xs text-tertiary;
          }
        }

        .userImage {
          @apply rounded-full h-7 w-7;
        }

        .signOut {
          @apply flex items-center text-primary text-2xl;
        }
      }

      .link {
        @apply text-primary border-b-2 border-b-transparent hover:border-sky-600 capitalize text-sm md:text-base;

        &.active {
          @apply lg:border-sky-600;
        }
      }

      .register {
        @apply bg-sky-600 hover:bg-opacity-50 text-white py-[2px] lg:py-1 px-1 lg:px-3 rounded text-sm md:text-base;
      }
    }
  }
}

